force-app/main/default/objects/ht_CarrierAppointment__c/fields/ht_AppointerStateCOID__c.field-meta.xml
<CustomField>
    <fullName>ht_AppointerStateCOID__c</fullName>
    <label>Appointer State CO ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>