force-app/main/default/objects/ht_CarrierAppointment__c/fields/ht_AppointmentEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>ht_AppointmentEffectiveDate__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>