force-app/main/default/objects/ht_CarrierAppointment__c/fields/ht_Carrier__c.field-meta.xml
<CustomField>
    <fullName>d4c_Carrier__c</fullName>
    <label>Carrier</label>
    <referenceTo>d4c_Carrier__c</referenceTo>
    <relationshipName>Insurance_Appointments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>