force-app/main/default/objects/ht_CarrierAppointment__c/fields/ht_CountyCode__c.field-meta.xml
<CustomField>
    <fullName>d4c_CountyCode__c</fullName>
    <label>County Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>