force-app/main/default/objects/ht_CarrierAppointment__c/fields/ht_LineOfAuthorityCode__c.field-meta.xml
<CustomField>
    <fullName>d4c_LineOfAuthorityCode__c</fullName>
    <description>Line of Authority Code for this carrier appointment. Previously stored in separate LOA record, now directly on appointment.</description>
    <label>Line of Authority Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>