force-app/main/default/objects/ht_CarrierAppointment__c/fields/ht_LineOfAuthorityDescription__c.field-meta.xml
<CustomField>
    <fullName>d4c_LineOfAuthorityDescription__c</fullName>
    <description>Line of Authority Description for this carrier appointment. Previously stored in separate LOA record, now directly on appointment.</description>
    <label>Line of Authority Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>