force-app/main/default/objects/ht_CarrierAppointment__c/fields/ht_Producer__c.field-meta.xml
<CustomField>
    <fullName>d4c_Producer__c</fullName>
    <label>Producer</label>
    <referenceTo>d4c_Producer__c</referenceTo>
    <relationshipName>Insurance_Appointments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>