force-app/main/default/objects/ht_CarrierAppointment__c/fields/ht_RenewalDate__c.field-meta.xml
<CustomField>
    <fullName>ht_RenewalDate__c</fullName>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>