force-app/main/default/objects/ht_CarrierAppointment__c/fields/ht_StateOrProvinceCode__c.field-meta.xml
<CustomField>
    <fullName>ht_StateOrProvinceCode__c</fullName>
    <label>State Or ProvinceCode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>