force-app/main/default/objects/ht_CarrierAppointment__c/fields/ht_StatusCode__c.field-meta.xml
<CustomField>
    <fullName>d4c_StatusCode__c</fullName>
    <label>Status Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>