force-app/main/default/objects/ht_CarrierAppointment__c/fields/ht_StatusReasonDate__c.field-meta.xml
<CustomField>
    <fullName>ht_StatusReasonDate__c</fullName>
    <label>Status Reason Date</label>
    <type>Date</type>
</CustomField>