force-app/main/default/objects/ht_CarrierAppointment__c/fields/ht_TerminationEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>ht_TerminationEffectiveDate__c</fullName>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>