force-app/main/default/objects/ht_CarrierAppointment__c/fields/ht_TerminationReason__c.field-meta.xml
<CustomField>
    <fullName>ht_TerminationReason__c</fullName>
    <label>Termination Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>