force-app/main/default/objects/ht_CarrierAppointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ht_StatusCode__c</columns>
    <columns>ht_StateOrProvinceCode__c</columns>
    <columns>ht_AppointmentEffectiveDate__c</columns>
    <columns>ht_TerminationEffectiveDate__c</columns>
    <columns>ht_Carrier__c</columns>
    <columns>ht_Producer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>